--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,10 @@ RoxygenNote: 7.1.2
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    dplyr,
+    usmap,
+    maptools
 Config/testthat/edition: 3
 Depends: 
     R (>= 2.10)
