--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Suggests:
     testthat (>= 3.0.0),
     dplyr,
     usmap,
-    maptools
+    maptools,
+    rgdal
 Config/testthat/edition: 3
 Depends: 
     R (>= 2.10)
